Win support for glm.

--- a/02_simple3d/CMakeLists.txt
+++ b/02_simple3d/CMakeLists.txt
@@ -10,8 +10,11 @@ add_executable(02_simple3d
 	../utils/shader.hpp
 	../utils/window.hpp
 )
-target_sources(02_simple3d PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../glad/src/glad.c)
-target_link_libraries(02_simple3d glm::glm glfw OpenGL::GL)
+target_sources(02_simple3d PRIVATE 
+	${CMAKE_CURRENT_SOURCE_DIR}/../glad/src/glad.c
+	${CMAKE_CURRENT_SOURCE_DIR}/../utils/ogl_geometry_factory.cpp
+)
+target_link_libraries(02_simple3d glm glfw OpenGL::GL)
 target_include_directories(02_simple3d PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/include
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils
