Updating cmake lists - custom target.

--- a/02_simple3d/CMakeLists.txt
+++ b/02_simple3d/CMakeLists.txt
@@ -14,7 +14,7 @@ target_sources(02_simple3d PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/src/glad.c
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils/ogl_geometry_factory.cpp
 )
-target_link_libraries(02_simple3d glm glfw OpenGL::GL)
+target_link_libraries(02_simple3d glm::glm glfw OpenGL::GL)
 target_include_directories(02_simple3d PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/include
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils
