--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,9 +73,20 @@ else()
 endif()
 
 
-# add_library(utils )
+add_library(utils STATIC
+	utils/ogl_material_factory.cpp
+	utils/ogl_geometry_factory.cpp	
+	utils/obj_file_loading.cpp	
+	)
+target_link_libraries(utils glm::glm glfw OpenGL::GL)
+target_include_directories(utils PUBLIC
+	${CMAKE_CURRENT_SOURCE_DIR}/glad/include
+	${CMAKE_CURRENT_SOURCE_DIR}
+)
+
 
 # Add subdirectories here
 add_subdirectory(01_triangle)
 add_subdirectory(02_simple3d)
+add_subdirectory(03_textures)
 
