Preparing the scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,5 +90,5 @@ target_include_directories(utils PUBLIC
 add_subdirectory(01_triangle)
 add_subdirectory(02_simple3d)
 add_subdirectory(03_textures)
-#add_subdirectory(04_deffered)
+add_subdirectory(04_deffered)
 
