--- a/04_deffered/CMakeLists.txt
+++ b/04_deffered/CMakeLists.txt
@@ -1,20 +1,16 @@
 # Set the minimum CMake version
 cmake_minimum_required(VERSION 3.10)
 
-project(03_textures)
+project(04_deffered)
 
-add_executable(03_textures 
+add_executable(04_deffered 
 	main.cpp
-	../utils/error_handling.hpp
-	../utils/ogl_resource.hpp
-	../utils/shader.hpp
-	../utils/window.hpp
 )
-target_sources(03_textures PRIVATE 
+target_sources(04_deffered PRIVATE 
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/src/glad.c
 )
-target_link_libraries(03_textures utils glm::glm glfw OpenGL::GL)
-target_include_directories(03_textures PRIVATE
+target_link_libraries(04_deffered utils glm::glm glfw OpenGL::GL)
+target_include_directories(04_deffered PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/include
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils
 	${CMAKE_CURRENT_SOURCE_DIR}/..
