Preparation for shadow mapping

--- a/04_deffered/CMakeLists.txt
+++ b/04_deffered/CMakeLists.txt
@@ -5,6 +5,8 @@ project(04_deffered)
 
 add_executable(04_deffered 
 	main.cpp
+	renderer.hpp
+	scene_definition.hpp
 )
 target_sources(04_deffered PRIVATE 
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/src/glad.c
