--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,4 +91,5 @@ add_subdirectory(01_triangle)
 add_subdirectory(02_simple3d)
 add_subdirectory(03_textures)
 add_subdirectory(04_deffered)
+add_subdirectory(05_shaders)
 
