--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,4 +95,5 @@ add_subdirectory(05_shaders)
 add_subdirectory(06_3d_textures)
 add_subdirectory(07_noise)
 add_subdirectory(09_compute)
+add_subdirectory(10_deffered_2)
 
