--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,4 +96,5 @@ add_subdirectory(06_3d_textures)
 add_subdirectory(07_noise)
 add_subdirectory(09_compute)
 add_subdirectory(10_deffered_2)
+add_subdirectory(11_opencl)
 
