--- a/12_l-system/CMakeLists.txt
+++ b/12_l-system/CMakeLists.txt
@@ -1,20 +1,20 @@
 # Set the minimum CMake version
 cmake_minimum_required(VERSION 3.10)
 
-project(05_shaders)
+project(12_lsystem)
 
-add_executable(05_shaders 
+add_executable(12_lsystem 
 	main.cpp
 	../utils/error_handling.hpp
 	../utils/ogl_resource.hpp
 	../utils/shader.hpp
 	../utils/window.hpp
 )
-target_sources(05_shaders PRIVATE 
+target_sources(12_lsystem PRIVATE 
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/src/glad.c
 )
-target_link_libraries(05_shaders utils glm::glm glfw OpenGL::GL)
-target_include_directories(05_shaders PRIVATE
+target_link_libraries(12_lsystem utils glm::glm glfw OpenGL::GL)
+target_include_directories(12_lsystem PRIVATE
 	${CMAKE_CURRENT_SOURCE_DIR}/../glad/include
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils
 	${CMAKE_CURRENT_SOURCE_DIR}/..
